--- a/index.css
+++ b/index.css
@@ -1,3 +1,65 @@
 * {
-    background-color: aqua;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+.home {
+    height: 100vh;
+    position: relative;
+    display:flex;
+}
+
+video {
+    object-fit: cover;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 1;
+}
+
+.content {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 28%;
+    height: 90%;
+    position: relative;
+    margin-left: 1rem;
+    margin-top: auto;
+    margin-bottom: auto;
+    /* background: rgba(252, 252, 252, 0.795); */
+    z-index: 3;
+    border-radius: 10px;
+}
+
+.liked {
+    display: flex;
+    justify-content: center;
+    margin: 5%;
+    height: 100vh;
+    background: rgba(252, 252, 252, 0.795);
+    border-radius: 3%;
+}
+.playlist {
+    display: flex;
+    justify-content: center;
+    margin: 5%;
+    height: 100vh;
+    background-color: green;
+    background: rgba(252, 252, 252, 0.795);
+    border-radius: 3%;
+}
+
+.subheader {
+    display: flex;
+    justify-content: center;
+    padding-top: 5px;
+    margin: 2%;
+    background-color: green;
+    color: white;
+    height: 4vh;
+    width: 100vh;
+    border-radius: 5%;
 }
