--- a/index.css
+++ b/index.css
@@ -39,17 +39,6 @@ video {
     border-radius: 10px;
 }
 
-
-.playlist {
-    display: flex;
-    width: 100%;
-    margin: auto;
-    margin-top: 7%;
-    height: 100vh;
-    /* background: rgba(252, 252, 252, 0.795); */
-    background-color: rgb(39, 39, 46);
-}
-
 .navbar {
     display: flex;
     justify-content: center;
@@ -61,15 +50,24 @@ video {
     background-color: rgb(39, 39, 46);
 }
 
+.playlist {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin: auto;
+    margin-top: 7%;
+    height: 100vh;
+    /* background: rgba(252, 252, 252, 0.795); */
+    background-color: rgb(39, 39, 46);
+}
+
 .subheader {
     display: flex;
-    justify-content: center;
-    padding-top: 5px;
-    margin: 2%;
+    padding-top: 1px;
     /* background-color: rgb(39, 39, 46); */
     color: white;
-    height: 4vh;
-    width: 100vh;
+    height: auto;
+    width: 100%;
     border-radius: 7px;
 }
 
@@ -81,10 +79,31 @@ video {
     background-color: rgb(39, 39, 46);
     color: white;
     font-size: 18px;
-    margin: 3%;
+}
+
+.btnhead {
+    width: 100%;
+    border: 0.1em solid white;
+    margin-bottom: 3px;
 }
 
 .iconspacing {
     margin-right: 10px;
     background-color: rgb(39, 39, 46);
+}
+
+.iconright {
+    position: absolute;
+    right: 0;
+}
+
+.create {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    position: relative;
+}
+
+.likedSongs {
+    background-color: rgb(67, 67, 170);
 }
