--- a/index.css
+++ b/index.css
@@ -114,6 +114,7 @@ video {
 .songs {
     display: flex;
     flex-direction: column;
+    align-items: center;
     width: 44%;
     height: 90%;
     position: relative;
@@ -127,11 +128,25 @@ video {
 
 .carousel {
     height: 40vh;
-    margin-top: 10%;
-    margin-left: 1%;
-    margin-right: 1%;
+    width: 99%;
+    margin: 1%;
     background-color: white;
     border: 3px solid rgb(67, 67, 170);
+}
+
+.search input{
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    border-radius: 20px;
+    border: 3px solid rgb(67, 67, 170);
+}
+
+.search {
+    margin: 1%;
+    height: 5.1vh;
+    border-radius: 20px;
+    width: 65%;
 }
 
 /* ******************************* */
