--- a/index.css
+++ b/index.css
@@ -128,10 +128,10 @@ video {
 
 .carousel {
     height: 40vh;
-    width: 99%;
+    width: 70%;
     margin: 1%;
     background-color: white;
-    border: 3px solid rgb(67, 67, 170);
+    border: 3px solid black;
 }
 
 .search input{
@@ -139,7 +139,7 @@ video {
     height: 100%;
     background-color: white;
     border-radius: 20px;
-    border: 3px solid rgb(67, 67, 170);
+    border: 3px solid black;
 }
 
 .search {
@@ -147,6 +147,7 @@ video {
     height: 5.1vh;
     border-radius: 20px;
     width: 65%;
+    /* visibility: hidden; */
 }
 
 /* ******************************* */
