--- a/index.css
+++ b/index.css
@@ -154,15 +154,22 @@ video {
 
 .playsection {
     display: flex;
-    justify-content: center;
     flex-direction: column;
+    align-items: center;
     width: 28%;
     height: 90%;
     position: relative;
-    margin-right: 1rem;
-    margin-top: auto;
+    margin: auto 0.6rem;
     margin-bottom: auto;
-    background-color: rgb(39, 39, 46);
+    background-color: grey;
     z-index: 3;
     border-radius: 10px;
+}
+
+.photo {
+    height: 60vh;
+    width: 70%;
+    margin: 1%;
+    background-color: white;
+    border: 3px solid black;
 }
