Removed third section

--- a/index.css
+++ b/index.css
@@ -115,20 +115,20 @@ video {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 44%;
+    width: 72%;
     height: 90%;
     position: relative;
     margin: auto 0.6rem;
     margin-bottom: auto;
-    background-color: grey;
+    background-color: rgb(39, 39, 46);
     z-index: 3;
     border-radius: 10px;
     
 }
 
 .carousel {
-    height: 40vh;
-    width: 70%;
+    height: 55%;
+    width: 80%;
     margin: 1%;
     background-color: white;
     border: 1px solid black;
@@ -150,9 +150,16 @@ video {
     visibility: hidden;
 }
 
+.songssection {
+    display: flex;
+    height: 30%;
+    width: 95%;
+    background-color: rgb(67, 67, 170);
+}
+
 /* ******************************* */
 
-.playsection {
+/* .playsection {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -173,4 +180,4 @@ video {
     margin-top: 5%;
     background-color: white;
     border: 1px solid black;
-}
+} */
