--- a/index.css
+++ b/index.css
@@ -5,6 +5,7 @@
     /* font-family: 'Ubuntu', sans-serif; */
     font-family: 'Montserrat', sans-serif;
     background-color: black;
+    /* background-color: rgb(67, 67, 170); */
     border-radius: 5px;
     font-size: 18px;
 }
@@ -115,7 +116,7 @@ video {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 72%;
+    width: 44%;
     /* height: 100vh; */
         height: 90vh;
     position: relative;
@@ -157,7 +158,7 @@ video {
     padding: 15px;
     height: 60%;
     width: 100%;
-    background-color: rgb(67, 67, 170);
+    /* background-color: rgb(67, 67, 170); */
     overflow-y: auto;
 }
 
@@ -167,7 +168,7 @@ video {
 
 .song-info {
     background-color: rgb(67, 67, 170);
-    border: 3px solid white;
+    border: 0px solid white;
     text-align: center;
     margin: 1px;
     color: white;
@@ -183,22 +184,25 @@ video {
 }
 
 p {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 13px;
     background-color: rgb(67, 67, 170);
 }
 
 .card-img-top {
-    /* border: 5px solid white; */
-    padding: 20px;
-    background-color: rgb(67, 67, 170);
-
+    /* border: 2px solid white; */
+    padding: 10px;
+    /* background-color: rgb(67, 67, 170); */
+    border-radius: 30px;
 }
 
 
 
 /* ******************************* */
 
-/* .playsection {
+.playsection {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -219,4 +223,4 @@ p {
     margin-top: 5%;
     background-color: white;
     border: 1px solid black;
-} */
+} 
