--- a/index.css
+++ b/index.css
@@ -11,9 +11,12 @@
 }
 
 .home {
-    height: 100vh;
+    height: 89vh;
+    background-color: black;
     position: relative;
     display:flex;
+    margin: 0;
+    padding: 0;
 }
 
 video {
@@ -30,11 +33,11 @@ video {
     justify-content: center;
     flex-direction: column;
     width: 28%;
-    height: 90%;
+    height: 92%;
     position: relative;
     margin-left: 1rem;
     margin-top: auto;
-    margin-bottom: auto;
+    margin-bottom: 17px;
     /* background: rgba(252, 252, 252, 0.795); */
     z-index: 3;
     border-radius: 10px;
@@ -118,10 +121,10 @@ video {
     align-items: center;
     width: 44%;
     /* height: 100vh; */
-        height: 90vh;
+        height: 92%;
     position: relative;
     margin: auto 0.6rem;
-    margin-bottom: auto;
+    margin-bottom: 17px;
     background-color: rgb(39, 39, 46);
     z-index: 3;
     border-radius: 10px;
@@ -207,20 +210,39 @@ p {
     flex-direction: column;
     align-items: center;
     width: 28%;
-    height: 90%;
+    height: 92%;
     position: relative;
     margin: auto 0.6rem;
-    margin-bottom: auto;
+    margin-bottom: 17px;
     background-color: grey;
     z-index: 3;
     border-radius: 10px;
 }
 
 .photo {
+    display: flex;
+    align-items: center;
     height: 55vh;
     width: 90%;
     margin: 1%;
     margin-top: 5%;
-    background-color: white;
+    background-color: black;
     border: 1px solid black;
 } 
+
+.photo img {
+    align-items: center;
+}
+
+
+
+
+
+/* **************** */
+
+.playpause {
+    margin: 0;
+    padding: 0;
+    height: 11vh;
+    background-color: rgb(24, 22, 64);
+}
