--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@
     font-family: 'Montserrat', sans-serif;
     background-color: black;
     /* background-color: rgb(67, 67, 170); */
-    border-radius: 5px;
+    /* border-radius: 5px; */
     font-size: 18px;
 }
 
@@ -43,10 +43,11 @@ video {
     z-index: 3;
     border-radius: 10px;
     border: 3px solid white;
+    /* background-color: grey; */
     border-bottom: 3px solid rgb(67, 67, 170);
 }
 
-.navbar {
+.navbartop {
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -54,7 +55,13 @@ video {
     width: 100%;
     margin: auto;
     color: white;
-    background-color: rgb(39, 39, 46);
+    /* background-color: rgb(39, 39, 46); */
+    /* background-color: grey; */
+    background-color: rgb(67, 67, 170);
+    border-bottom: 3px solid grey;
+    border-top-left-radius: 7px;
+    border-top-right-radius: 7px;
+    height: 26%;
 }
 
 .playlist {
@@ -62,41 +69,75 @@ video {
     flex-direction: column;
     width: 100%;
     margin: auto;
-    margin-top: 7%;
+    /* margin-top: 7%; */
     height: 100vh;
+    overflow-y: auto;
+    
     /* background: rgba(252, 252, 252, 0.795); */
-    background-color: rgb(39, 39, 46);
+    /* background-color: rgb(39, 39, 46); */
 }
 
 .subheader {
     display: flex;
-    padding-top: 1px;
+    padding-top: 0px;
     /* background-color: rgb(39, 39, 46); */
     color: white;
     height: auto;
     width: 100%;
-    border-radius: 7px;
+    /* border-top: 3ps solid black; */
+    /* border-radius: 0px; */
+    /* margin-bottom: 10px; */
+    border: 10px solid black;
 }
 
-.btn {
+.btnbar {
     display: flex;
     align-items: center;
     padding: 10px;
-    height: 35px;
-    background-color: rgb(39, 39, 46);
+    /* height: 100%; */
+    
+    /* background-color: rgb(39, 39, 46); */
+    /* background-color: grey; */
+    background-color: rgb(67, 67, 170);
+    border-radius: 3px;
     color: white;
-    font-size: 18px;
+    font-size: 17px;
+}
+
+.btnsub {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    /* height: 100%; */
+    
+    /* background-color: rgb(39, 39, 46); */
+    /* background-color: grey; */
+    /* background-color: rgb(67, 67, 170); */
+    border-radius: 3px;
+    color: white;
+    font-size: 17px;
 }
 
 .btnhead {
     width: 100%;
-    border: 0.1em solid white;
+    /* border: 0.1em solid white; */
+    /* border-top: 1px solid rgb(67, 67, 170);
+    border-bottom: 1px solid rgb(67, 67, 170); */
+    /* background-color: #000; */
+    /* background-color: rgb(67, 67, 170); */
     margin-bottom: 3px;
+    
+}
+
+.btnhead .iconspacing {
+    background-color: #000;
+    /* background-color: rgb(67, 67, 170); */
 }
 
 .iconspacing {
     margin-right: 10px;
-    background-color: rgb(39, 39, 46);
+    /* background-color: rgb(39, 39, 46); */
+    background-color: rgb(67, 67, 170);
 }
 
 .iconright {
@@ -111,8 +152,13 @@ video {
     position: relative;
 }
 
-.likedSongs {
-    background-color: rgb(67, 67, 170);
+.liked {
+    /* background-color: rgb(67, 67, 170); */
+    margin: 2px auto;
+    background-color: grey;
+    font-size: 13px;
+    border-radius: 5px;
+    height: 50px;
 }
 
 
@@ -159,11 +205,12 @@ video {
 }
 
 .playpause {
-    height: 20vh;
+    height: 25%;
     border-radius: 10px;
     width: 100%;
     /* background-color: blueviolet; */
     background-color: rgb(67, 67, 170);
+    border-bottom: 3px solid grey;
     /* visibility: hidden; */
 }
 
@@ -175,11 +222,17 @@ video {
     width: 100%;
     /* background-color: rgb(67, 67, 170); */
     overflow-y: auto;
+    /* background-color: grey; */
 }
 
 .cardcontent {
     margin-bottom: 40px;
+    /* background-color: grey; */
 }
+
+/* .rowcontent {
+    background-color: grey;
+} */
 
 .song-info {
     background-color: rgb(67, 67, 170);
@@ -226,21 +279,31 @@ p {
     position: relative;
     margin: auto 0.6rem;
     /* margin-bottom: 17px; */
-    background-color: grey;
-    z-index: 3;
+    background-color: black;
+    /* z-index: 3; */
     border-radius: 10px;
     border: 3px solid white;
     border-bottom: 3px solid rgb(67, 67, 170);
 }
 
+.playsectiontop {
+    border-top-left-radius: 7px;
+    border-top-right-radius: 7px;
+    height: 20%;
+    width: 100%;
+    border-bottom: 3px solid grey;
+    /* background-color: grey; */
+    background-color: rgb(67, 67, 170);
+}
+
 .photo {
     display: flex;
     align-items: center;
-    height: 55vh;
+    /* height: 55vh; */
     width: 90%;
-    margin: 1%;
-    margin-top: 5%;
-    background-color: black;
+    /* margin: 1%; */
+    /* margin-top: 5%; */
+    background-color: green;
     border: 1px solid black;
 } 
 
