--- a/index.css
+++ b/index.css
@@ -12,12 +12,26 @@
     font-size: 18px;
 }
 
+
+::-webkit-scrollbar {
+    width: 5px;
+    height: 8px;
+    background-color: #aaa; /* or add it to the track */
+    }
+    
+    /* Add a thumb */
+    ::-webkit-scrollbar-thumb {
+    background: #000;
+    /* background: rgb(67, 67, 170); */
+    }
+
 .home {
-    height: 100vh;
+    height: 90vh;
     background-color: black;
     position: relative;
     display:flex;
-    margin: 0;
+    margin: auto;
+    
     padding: 0;
 }
 
@@ -64,7 +78,7 @@ video {
     background-color: rgb(67, 67, 170);
     /* border-bottom: 3px solid grey; */
     /* border: 3px solid black; */
-    border: 3px solid grey;
+    /* border: 1px solid white; */
     border-top-left-radius: 7px;
     border-top-right-radius: 7px;
     height: 26%;
@@ -107,7 +121,7 @@ video {
     align-items: center;
     padding: 10px;
     /* height: 100%; */
-    
+    cursor: pointer;
     /* background-color: rgb(39, 39, 46); */
     /* background-color: grey; */
     /* background-color: rgb(67, 67, 170); */
@@ -159,6 +173,7 @@ video {
 .iconright {
     position: absolute;
     right: 0;
+    cursor: pointer;
 }
 
 .create {
@@ -196,7 +211,7 @@ video {
     /* background: transparent; */
     /* opacity: 0.9; */
     border-radius: 5px;
-    border: 3px solid white;
+    /* border: 3px solid white; */
     border-bottom: 3px solid rgb(67, 67, 170);
     /* background-color: rgb(29, 28, 28); */
 
@@ -234,7 +249,9 @@ video {
     background: transparent;
     color: white;
     text-align: center;
-    border-bottom: 3px solid grey;
+    /* border-bottom: 3px solid grey; */
+    border: 2px solid rgb(67, 67, 170);
+    border-radius: 5px;
     /* visibility: hidden; */
 }
 
@@ -310,6 +327,7 @@ video {
     justify-content: center;
     align-items: center;
     margin-bottom: 0;
+    /* cursor: pointer; */
     /* background-color: white; */
 }
 
@@ -318,7 +336,7 @@ video {
     /* background-color: rgb(67, 67, 170); */
     /* background-color: rgb(12, 12, 55); */
     background-color: rgb(17, 16, 16);
-
+    cursor: pointer;
     margin: auto 9px;
     /* color: #000; */
     /* color: rgb(246, 231, 231); */
@@ -393,13 +411,14 @@ video {
     margin-right: 5px;
     /* background-color: rgb(12, 12, 55) */
     background-color: rgb(17, 16, 16);
-    color: rgb(67, 67, 170);;
+    color: rgb(67, 67, 170);
+    cursor: pointer;
 
 }
 
 .songssection {
     /* display: flex; */
-    border: 2px solid #000;
+    /* border: 2px solid #000; */
     /* background-color: rgb(29, 28, 28); */
     background-color: rgb(17, 16, 16);
 
@@ -410,6 +429,7 @@ video {
     overflow-y: auto;
     /* background-color: grey; */
     /* background-color: whitesmoke; */
+    margin-top: 40px;
 }
 
 .helo {
@@ -420,7 +440,7 @@ video {
 }
 
 .h-100 {
-    background-color: rgb(10,10,10);
+    background-color: rgb(13,13,13);
     /* background-color: aqua; */
     /* border-radius: 4px; */
     /* border: px solid white; */
@@ -472,9 +492,9 @@ video {
 
 .card-img-top {
     /* border: 2px solid white; */
-    padding: 10px;
+    padding: 5px;
     /* background-color: rgb(67, 67, 170); */
-    /* border-radius: 10px; */
+    /* border-radius: 40px; */
     background-color: rgb(13, 13, 13);
 }
 
@@ -501,9 +521,9 @@ video {
 .playsectiontop {
     border-top-left-radius: 7px;
     border-top-right-radius: 7px;
-    height: 20%;
+    height: 19%;
     width: 100%;
-    border: 3px solid grey;
+    /* border: 3px solid grey; */
     /* background-color: grey; */
     /* background-color: rgb(67, 67, 170); */
     /* background-color: rgb(12, 12, 55) */
@@ -512,6 +532,7 @@ video {
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
 /* font-family: 'Great Vibes', cursive; */
 /* font-family: 'Kalam', cursive; */
 font-family: 'Lobster', cursive;
@@ -538,6 +559,11 @@ font-size: 30px;
     height: 70%
 }
 
+
+.blackbar {
+    /* background-color: black; */
+    height: 5vh;
+}
 
 
 
