--- a/index.css
+++ b/index.css
@@ -289,6 +289,10 @@ video {
     /* font-family: 'Lobster', cursive; */
     /* font-family: 'Pacifico', cursive; */
     /* font-family: 'Ubuntu', sans-serif; */
+    /* font-family: 'Acme', sans-serif; */
+/* font-family: 'Alice', serif; */
+font-family: 'Marcellus', serif;
+/* font-family: 'Philosopher', sans-serif; */
 }
 
 .bottom {
@@ -554,6 +558,7 @@ video {
     /* background-color: rgb(67, 67, 170); */
     background-color: rgb(17, 16, 16);
     color: white;
+    /* color: rgb(67, 67, 170); */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -562,7 +567,7 @@ video {
 font-family: 'Kalam', cursive;
 /* font-family: 'Lobster', cursive; */
 /* font-family: 'Pacifico', cursive;  */
-font-size: 30px;
+font-size: 25px;
 
 }
 
