--- a/index.css
+++ b/index.css
@@ -593,7 +593,7 @@ font-size: 25px;
     /* align-items: center; */
     /* height: 55vh; */
     width: 100%;
-    height: 80%;
+    height: 82%;
     /* margin-top: 20%; */
     /* margin: 1%; */
     /* margin-top: 5%; */
@@ -614,12 +614,14 @@ font-size: 25px;
     /* flex-direction: row; */
     /* justify-content: center; */
     align-items: center;
-    height: 30%;
+    height: 100%;
     color: white;
     /* padding: ; */
     /* background-color: rgb(17, 16, 16); */
     /* background-color: aqua; */
-    background-color: rgb(17, 16, 16);
+    /* background-color: rgb(17, 16, 16); */
+    background-color: rgb(67, 67, 170);
+    /* border-radius: 3px; */
 }
 
 .covermusicinfo {
@@ -684,4 +686,36 @@ font-size: 25px;
 .footer {
     height: 14vh;
     background-color: #aaa;
+}
+
+.footersong {
+    display: flex;
+    /* flex-direction: column; */
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    left: 0;
+    margin: auto 5%;
+    /* height: 10px;
+    width: 10px; */
+    height: 90%;
+
+}
+
+.footcovericon {
+    margin: 5px;
+    font-size: 15px;
+}
+
+.footersongname {
+    margin: 5px;
+    /* width: 40%; */
+    font-size: 15px;
+}
+
+.footersong img {
+    max-width: 100%;
+    max-height: 100%;
+    display: block;
+    margin: auto;
 }
