--- a/index.css
+++ b/index.css
@@ -26,7 +26,7 @@
     }
 
 .home {
-    height: 83vh;
+    height: 84vh;
     /* background-color: aqua; */
     position: relative;
     display:flex;
@@ -419,7 +419,7 @@ font-family: 'Marcellus', serif;
     right: 0;
     width: 20%;
     display: flex;
-    margin-right: 6%;
+    margin-right: 1%;
     /* justify-content: center; */
     justify-content: center;
     flex-direction: row;
@@ -684,7 +684,7 @@ font-size: 25px;
 } */
 
 .footer {
-    height: 14vh;
+    height: 13vh;
     background-color: #aaa;
 }
 
@@ -695,7 +695,8 @@ font-size: 25px;
     align-items: center;
     position: absolute;
     left: 0;
-    margin: auto 5%;
+    margin: auto 1%;
+    margin-top: 0.4%;
     /* height: 10px;
     width: 10px; */
     height: 90%;
