--- a/index.css
+++ b/index.css
@@ -2,16 +2,10 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    /* font-family: 'Ubuntu', sans-serif; */
     font-family: 'Montserrat', sans-serif;
     background-color: black;
-    /* background-color: rgb(189, 230, 233); */
-
-    /* background-color: rgb(67, 67, 170); */
-    /* border-radius: 5px; */
     font-size: 18px;
 }
-
 
 ::-webkit-scrollbar {
     width: 5px;
@@ -19,170 +13,90 @@
     background-color: #aaa; /* or add it to the track */
     }
     
-    /* Add a thumb */
-    ::-webkit-scrollbar-thumb {
-    background: #000;
-    /* background: rgb(67, 67, 170); */
-    }
+/* Add a thumb */
+::-webkit-scrollbar-thumb {
+background: #000;
+}
 
-.home {
-    height: 84vh;
-    /* background-color: aqua; */
-    position: relative;
+/* ***********HEADER************** */
+.header {
+    height: 2vh;
+    background-color: rgb(17, 16, 16);
+}
+
+/* *************BODY SECTION**************** */
+
+.body {
+    height: 86vh;
     display:flex;
     margin: auto;
-    
-    padding: 0;
 }
 
-video {
-    object-fit: cover;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    z-index: 1;
-}
+/* ********FIRST SECTION************* */
 
-.content {
+
+.first-section {
     display: flex;
-    justify-content: center;
     flex-direction: column;
-    width: 23%;
-    height: auto;
-    /* height: 100%; */
-    /* position: relative; */
-    /* margin-left: 1rem;
-    margin-top: auto;
-    margin-bottom: 17px; */
-    margin-right: 1px;
-    /* background: rgba(252, 252, 252, 0.795); */
-    /* background-color: aqua; */
-    z-index: 3;
-    /* border-radius: 5px; */
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-    /* border: 3px solid white; */
-    /* background-color: aqua; */
     border-bottom: 3px solid rgb(67, 67, 170);
+    width: 23%;
+    height: 100%;
+    margin-right: 1px;
 }
 
-.navbartop {
+.nav-bar {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    padding: 0px auto;
-    width: 100%;
-    /* margin: auto; */
+    background-color: rgb(17, 16, 16);
+    height: 20%;
     color: white;
-    /* background-color: rgb(39, 39, 46); */
-    /* background-color: grey; */
-    /* background-color: rgb(67, 67, 170); */
-    /* background-color: rgb(12, 12, 55); */
-    /* background-color: rgb(67, 67, 170); */
-    background-color: rgb(17, 16, 16);
-    /* border-bottom: 3px solid grey; */
-    /* border: 3px solid black; */
-    /* border: 1px solid white; */
-    border-top-left-radius: 7px;
-    border-top-right-radius: 7px;
-    height: 18%;
 }
 
-.playlist {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    /* margin: auto; */
-    /* margin-top: 7%; */
-    /* height: 85%; */
-    height: 100%;
-    overflow-y: auto;
-    /* border: 3px solid white; */
-    /* margin-top: 20px; */
-    border-radius: 5px;
-    /* background: rgba(252, 252, 252, 0.795); */
-    /* background-color: rgb(39, 39, 46); */
-    background-color: rgb(17, 16, 16);
-
-}
-
-.subheader {
-    display: flex;
-    padding-top: 0px;
-    /* background-color: rgb(39, 39, 46); */
-    color: white;
-    height: auto;
-    width: 100%;
-    /* border-top: 3ps solid black; */
-    /* border-radius: 0px; */
-    /* margin-bottom: 10px; */
-    /* border: 10px solid black; */
-    background-color: rgb(17, 16, 16);
-
-}
-
-.btnbar {
+.navbar-button {
     display: flex;
     align-items: center;
     padding: 5px;
-    /* height: 100%; */
     cursor: pointer;
-    /* background-color: rgb(39, 39, 46); */
-    /* background-color: grey; */
-    /* background-color: rgb(67, 67, 170); */
-    /* background-color: rgb(12, 12, 55); */
-    /* background-color: rgb(67, 67, 170); */
     background-color: rgb(17, 16, 16);
     border-radius: 3px; 
     color: white;
     font-size: 17px;
-}
-
-.btnsub {
-    display: flex;
-    align-items: center;
-    padding: 10px;
-    /* height: 100%; */
-    
-    /* background-color: rgb(39, 39, 46); */
-    /* background-color: grey; */
-    /* background-color: rgb(67, 67, 170); */
-    border-radius: 3px;
-    color: white;
-    font-size: 17px;
-}
-
-.btnhead {
-    width: 100%;
-    /* border: 0.1em solid white; */
-    /* border-top: 1px solid rgb(67, 67, 170);
-    border-bottom: 1px solid rgb(67, 67, 170); */
-    /* background-color: #000; */
-    /* background-color: rgb(67, 67, 170); */
-    margin-bottom: 3px;
-    
-}
-
-.btnhead .iconspacing {
-    background-color: #000;
-    /* background-color: rgb(67, 67, 170); */
+    height: 100%;
 }
 
 .iconspacing {
-    margin: 10px;
-    /* background-color: rgb(39, 39, 46); */
-    /* background-color: rgb(67, 67, 170); */
-    /* background-color: rgb(12, 12, 55); */
-    /* background-color: rgb(67, 67, 170); */
+    margin: 5%;
     background-color: rgb(17, 16, 16);
 }
 
-.iconright {
-    position: absolute;
-    right: 0;
-    cursor: pointer;
+/* ****** */
+
+.playlist {
+    display: flex;
+    flex-direction: column;
+    height: 80%;
+    overflow-y: auto;
+    border-radius: 5px;
+    background-color: rgb(17, 16, 16);
 }
+
+.subheader {
+    display: flex;
+    align-items: center;
+    color: white;
+    width: 100%;
+    padding: 5px;
+}
+
+/* .btnhead {
+    width: 100%;
+    margin-bottom: 3px; 
+} */
+
+/* .btnhead .iconspacing {
+    background-color: #000;
+} */
 
 .create {
     display: flex;
@@ -191,137 +105,139 @@ video {
     position: relative;
 }
 
+.iconright {
+    position: absolute;
+    right: 0;
+    cursor: pointer;
+    background-color: #000;
+}
+
 .liked {
-    /* background-color: rgb(67, 67, 170); */
     margin: 2px auto;
-    /* margin-left: 10px; */
     padding-left: 10px;
-    background-color: grey;
-    font-size: 13px;
+    background-color: rgb(56, 55, 55);
     border-radius: 5px;
     height: 50px;
     text-align: center;
-    font-size: 15px;
+    font-size: 16px;
 }
 
-
-/* ******************************* */
+/* ************SECOND SECTION******************* */
 
 .songs {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 54%;
-    /* height: 100vh; */
-        height: 100%;
-    position: relative;
-    margin: auto 0px;
-    /* margin-bottom: 17px; */
-    /* background-color: rgb(39, 39, 46); */
-    /* background-color: rgb(67, 67, 170); */
+    height: 100%;
     z-index: 3;
-    /* background: transparent; */
-    /* opacity: 0.9; */
-    /* border-radius: 20px; */
-    /* margin-top: 0.4%; */
-    /* border: 3px solid white; */
     border-bottom: 3px solid rgb(67, 67, 170);
-    /* background-color: rgb(29, 28, 28); */
-
-    
-}
-
-.carousel {
-    height: 41%;
-    width: 80%;
-    margin: 1%;
-    background-color: white;
-    border: 1px solid black;
-}
-
-.carousel-item img {
-    height: 200px;
-}
-
-
-.search input{
-    width: 100%;
-    height: 100%;
-    background-color: white;
-    border-radius: 20px;
-    border: 2px solid black;
-}
-
-.playpause {
-    height: 100%;
-    /* border-radius: 10px; */
-    width: 100%;
-    /* background-color: blueviolet; */
-    /* background-color: rgb(67, 67, 170); */
-    /* background-color: rgb(26, 26, 186); */
-    background: transparent;
-    color: white;
-    text-align: center;
-    /* border-bottom: 3px solid grey; */
-    /* border: 2px solid rgb(67, 67, 170); */
-    border-radius: 5px;
-    /* visibility: hidden; */
 }
 
 .name {
-    /* background-color: white; */
     background-color: rgb(67, 67, 170);
-    /* color: white; */
-    /* color: #000; */
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 10%;
-    /* font-family: 'Great Vibes', cursive; */
-    /* font-family: 'Kalam', cursive; */
-    font-size: 100%;
-    /* border-radius: 3px; */
+    font-size: 1.3rem;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
     color: white;
-    /* border: 1px solid white; */
-    /* font-family: 'Lobster', cursive; */
-    /* font-family: 'Pacifico', cursive; */
-    /* font-family: 'Ubuntu', sans-serif; */
-    /* font-family: 'Acme', sans-serif; */
-/* font-family: 'Alice', serif; */
-font-family: 'Marcellus', serif;
-/* font-family: 'Philosopher', sans-serif; */
+    font-family: 'Marcellus', serif;
 }
+
+.songs-section {
+    border-top: 5px solid rgb(8, 8, 8);
+    background-color: rgb(17, 16, 16);
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    padding: 20px;
+    height: 90%;
+    width: 100%;
+    margin-left: 5px;
+    overflow-y: auto;
+    margin-top: 10px;
+}
+
+.row {
+    background-color: rgb(17, 16, 16);
+}
+
+.cards {
+    margin-bottom: 5%;
+    background-color: rgb(17, 16, 16);
+}
+
+.card-img-top {
+    padding: 5px;
+    background-color: rgb(13, 13, 13);
+}
+
+.song-info {
+    border-radius: 5px;
+    color: white;
+}
+
+.music-name {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    font-size: 15px;
+    align-items: center;
+    text-align: center;
+    margin: auto;
+    background-color: rgb(13,13,13);
+}
+
+.duration {
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* margin-top: 3px; */
+    font-size: 12px;
+    background-color: rgb(67, 67, 170);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.playpause {
+    height: 100%;
+    width: 100%;
+    background: transparent;
+    color: white;
+    text-align: center;
+    border-radius: 5px;
+}
+
 
 .bottom {
     position: sticky;
     bottom: 0;
-    /* border: 3px solid white;
-    border-radius: 5px; */
-    /* height: 130px; */
-    /* background-color: rgb(67, 67, 170); */
-    /* background-color: rgb(12, 12, 55); */
-    /* background-color: rgb(17, 16, 16); */
-    /* background-color: #000; */
-        /* background: rgba(252, 252, 252, .795); */
-        /* background: transparent; */
-
-
-    /* background-color: blue; */
-    /* background-color: rgb(67, 67, 170); */
+    padding: 0;
     color: white;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column; 
     height: 100%;
-    /* background-color: green; */
 }
 
 .progressBar {
-    /* accent-color: white; */
     accent-color: rgb(67, 67, 170);
     height: 2px;
 }
@@ -329,67 +245,36 @@ font-family: 'Marcellus', serif;
 .timebar {
     display: flex;
     flex-direction: row;
-    /* background-color: aqua; */
     align-items: center;
-    /* background-color: rgb(67, 67, 170); */
-    /* background-color: rgb(12, 12, 55); */
-    /* background-color: rgb(17, 16, 16); */
     width: 44vw;
-    /* height: 50%; */
     border-radius: 4px;
     bottom: 0;
-    /* position: absolute; */
-    /* margin: 0.01%; */
-    /* margin-bottom: 0.1%; */
-    /* background-color: aqua; */
 }
 
 .icons {
     width: 95%;
-    /* background-color: aqua; */
-    /* background-color: rgb(67, 67, 170); */
-    /* background-color: rgb(12, 12, 55); */
-    /* background-color: rgb(17, 16, 16); */
-    /* margin-bottom: 1px; */
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     margin-top: 1.5%;
     margin-bottom: 0;
-    /* cursor: pointer; */
-    /* background-color: white; */
 }
 
 .icons .fas {
-    /* background-color: aqua; */
-    /* background-color: rgb(67, 67, 170); */
-    /* background-color: rgb(12, 12, 55); */
-    /* background-color: rgb(17, 16, 16); */
     cursor: pointer;
     margin: auto 9px;
-    /* color: #000; */
-    /* color: rgb(246, 231, 231); */
-    /* color: rgb(67, 67, 170); */
     font-size: 35px;
-    /* color: rgb(190, 186, 207); */
-    /* color: rgb(67, 67, 170); */
-    
 }
 
 .icons .smallicon {
     font-size: 20px;
-    /* background-color: aqua; */
     margin: auto 1%;
 }
 
 #timerstart {
     font-size: 12px;
-    /* background-color: aqua; */
-    /* background-color: rgb(12, 12, 55); */
-    /* background-color: rgb(17, 16, 16); */
     margin: 5px;
-    /* color: black; */
     color: rgb(246, 231, 231);
     border-end-end-radius: 4px;
     border-start-end-radius: 4px;
@@ -397,11 +282,7 @@ font-family: 'Marcellus', serif;
 
 #timerend {
     font-size: 12px;
-    /* background-color: aqua; */
-    /* background-color: rgb(12, 12, 55); */
-    /* background-color: rgb(17, 16, 16); */
     margin: 5px;
-    /* color: black; */
     color: rgb(246, 231, 231);
     border-end-end-radius: 4px;
     border-start-end-radius: 4px;
@@ -410,7 +291,6 @@ font-family: 'Marcellus', serif;
 #myProgressBar{
     display: flex;
     width: 100%;
-    /* background-color: red;  */
     cursor: pointer;
 }
 
@@ -420,20 +300,14 @@ font-family: 'Marcellus', serif;
     width: 20%;
     display: flex;
     margin-right: 1%;
-    /* justify-content: center; */
     justify-content: center;
     flex-direction: row;
     align-items: center;
-    /* background-color: rgb(12, 12, 55) */
-    /* background-color: rgb(17, 16, 16); */
-
 }
 
 #myVolumeBar{
-    /* display: flex; */
     width: 40%;
     background-color: white; 
-    /* accent-color: white; */
     accent-color: rgb(67, 67, 170);
     height: 2px;
     cursor: pointer;
@@ -443,98 +317,20 @@ font-family: 'Marcellus', serif;
 }
 
 .volumeicon {
-    /* background-color: white; */
     margin-right: 1px;
-    /* background-color: rgb(12, 12, 55) */
-    /* background-color: rgb(17, 16, 16); */
-    /* color: rgb(67, 67, 170); */
     cursor: pointer;
 
 }
 
-.songssection {
-    /* display: flex; */
-    border-top: 5px solid rgb(8, 8, 8);
-    /* background-color: rgb(29, 28, 28); */
-    background-color: rgb(17, 16, 16);
-    border-radius: 10px;
-    padding: 15px;
-    height: 100%;
-    width: 100%;
-    margin-left: 5px;
-    /* background-color: rgb(67, 67, 170); */
-    overflow-y: auto;
-    /* background-color: grey; */
-    /* background-color: whitesmoke; */
-    margin-top: 10px;
-}
-
-.helo {
-    /* background-color: rgb(29, 28, 28); */
-    background-color: rgb(17, 16, 16);
-
-
-}
-
-.h-100 {
-    background-color: rgb(13,13,13);
-    /* background-color: aqua; */
-    /* border-radius: 4px; */
-    /* border: px solid white; */
-    /* border-radius: 20px; */
-}
-
-
-.cardcontent {
-    margin-bottom: 20px;
-    /* background-color: rgb(29, 28, 28); */
-    /* background-color: rgb(32, 32, 66) */
-    background-color: rgb(17, 16, 16);
-    /* background-color: white; */
-}
 
 
 
-/* .rowcontent {
-    background-color: grey;
-} */
 
-.song-info {
-    background-color: rgb(67, 67, 170);
-    border: 0px solid white;
-    border-radius: 5px;
-    text-align: center;
-    margin: 1px;
-    color: white;
-    height: 60px;
-}
 
-.music-name {
-    height: 35px;
-    display: flex;
-    justify-content: center;
-    font-size: 15px;
-    align-items: center;
-    margin: 0;
-    background-color: rgb(13,13,13);
-}
 
-.duration {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 3px;
-    font-size: 12px;
-    background-color: rgb(67, 67, 170);
-}
 
-.card-img-top {
-    /* border: 2px solid white; */
-    padding: 5px;
-    /* background-color: rgb(67, 67, 170); */
-    /* border-radius: 40px; */
-    background-color: rgb(13, 13, 13);
-}
+
+
 
 
 
@@ -548,38 +344,24 @@ font-family: 'Marcellus', serif;
     height: 100%;
     position: relative;
     margin: auto 1px;
-    /* margin-bottom: 17px; */
-    /* background-color: black; */
     background-color: rgb(17, 16, 16);
     z-index: 3;
-    /* border-radius: 5px; */
-    /* border: 3px solid white; */
     border-bottom: 3px solid rgb(67, 67, 170);
 }
 
 .playsectiontop {
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
-    height: 18%;
+    height: 16%;
     width: 100%;
-    /* border: 3px solid grey; */
-    /* background-color: grey; */
-    /* background-color: rgb(67, 67, 170); */
-    /* background-color: rgb(12, 12, 55) */
-    /* background-color: rgb(67, 67, 170); */
     background-color: rgb(17, 16, 16);
     color: white;
-    /* color: rgb(67, 67, 170); */
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
-/* font-family: 'Great Vibes', cursive; */
-font-family: 'Kalam', cursive;
-/* font-family: 'Lobster', cursive; */
-/* font-family: 'Pacifico', cursive;  */
-font-size: 25px;
-
+    font-family: 'Kalam', cursive;
+    font-size: 25px;
 }
 
 .blackb {
@@ -590,16 +372,8 @@ font-size: 25px;
 .photo {
     display: flex;
     flex-direction: column;
-    /* align-items: center; */
-    /* height: 55vh; */
     width: 100%;
-    height: 82%;
-    /* margin-top: 20%; */
-    /* margin: 1%; */
-    /* margin-top: 5%; */
-    /* background-color: green; */
-    /* border: 3px solid white; */
-    
+    height: 84%; 
 } 
 
 .photo img {
@@ -609,31 +383,19 @@ font-size: 25px;
 }
 
 .songdetails {
-    /* padding: 5%; */
-    /* display: flex; */
-    /* flex-direction: row; */
-    /* justify-content: center; */
     align-items: center;
     height: 100%;
     color: white;
-    /* padding: ; */
-    /* background-color: rgb(17, 16, 16); */
-    /* background-color: aqua; */
-    /* background-color: rgb(17, 16, 16); */
     background-color: rgb(67, 67, 170);
-    /* border-radius: 3px; */
 }
 
 .covermusicinfo {
     display: flex;
     flex-direction: row;
-    /* justify-content: center; */
-    /* height: 80%; */
     align-items: center;
     width: 100%;
     padding: 5%;
     background-color: rgb(17, 16, 16);
-    /* background-color: antiquewhite; */
 }
 
 .covermusicname {
@@ -643,8 +405,6 @@ font-size: 25px;
 
 .covericon{
     display: flex;
-
-    /* margin: 5% ; */
     position: absolute;
     right: 0;
     margin: auto 5%;
@@ -657,50 +417,20 @@ font-size: 25px;
     cursor: pointer;
 }
 
-.blackbar {
-    /* background-color: black; */
-    height: 2vh;
-    border-radius: 5px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    background-color: rgb(17, 16, 16);
-    /* background-color: rgb(67, 67, 170); */
-    font-family: 'Kalam', cursive;
-    /* background-color: rgb(0, 0, 0); */
-    font-size: 100%;
-}
-
-
-
-/* **************** */
-
-/* .playpause {
-    margin: 0;
-    padding: 0;
-    height: 11vh;
-    background-color: rgb(24, 22, 64);
-} */
-
 .footer {
-    height: 13vh;
+    height: 11vh;
     background-color: #aaa;
 }
 
 .footersong {
     display: flex;
-    /* flex-direction: column; */
     justify-content: center;
     align-items: center;
     position: absolute;
     left: 0;
     margin: auto 1%;
     margin-top: 0.4%;
-    /* height: 10px;
-    width: 10px; */
     height: 90%;
-
 }
 
 .footcovericon {
@@ -711,7 +441,6 @@ font-size: 25px;
 
 .footersongname {
     margin: 5px;
-    /* width: 40%; */
     font-size: 15px;
 }
 
