--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@
     padding: 0;
     font-family: 'Montserrat', sans-serif;
     background-color: black;
+    color: white;
     font-size: 18px;
 }
 
@@ -166,39 +167,33 @@ background: #000;
 }
 
 .cards {
-    margin-bottom: 5%;
+    margin-bottom: 4%;
     background-color: rgb(17, 16, 16);
 }
 
 .card-img-top {
-    padding: 5px;
+    padding: 8px;
     background-color: rgb(13, 13, 13);
 }
 
 .song-info {
-    border-radius: 5px;
-    color: white;
+    height: 70px;
 }
 
 .music-name {
-    width: 100%;
-    display: flex;
-    justify-content: center;
+    padding: 5%;
+    font-weight: bolder;
+    font-family: 'Marcellus', serif;
     font-size: 15px;
-    align-items: center;
-    text-align: center;
-    margin: auto;
-    background-color: rgb(13,13,13);
 }
 
 .duration {
-    height: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* margin-top: 3px; */
+    padding: 3%;
     font-size: 12px;
+    font-weight: 520;
     background-color: rgb(67, 67, 170);
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
 }
 
 
